removed idea files and refactored implementations